Home component and About componet layout problem fixed and search server side done.

--- a/app/(pages)/about/about.module.css
+++ b/app/(pages)/about/about.module.css
@@ -33,6 +33,7 @@
 .box {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 10px;
 }
 
